fix: layout spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,7 +12,7 @@ html, body, #__next {
 
 #footer {
   position: absolute;
-  bottom: 0;
+  bottom: 15px;
   left: 0;
   right: 0;
 }
